#pixmapdir = "$(datadir)/pcsxr"
#pixmap_DATA = \
    pcsxr-cd-open.png \
    pcsxr-iso-open.png \
    pcsxr-iso-reopen.png \
    pcsxr-memcard.png \
    pcsxr-play.png \
    pcsxr-plugin-cdr.png \
    pcsxr-plugin-gpu.png \
    pcsxr-plugin-pad.png \
    pcsxr-plugin-sio1.png \
    pcsxr-plugin-spu.png \
    pcsxr.png

icondir = "$(datadir)/pixmaps"
icon_DATA = pcsxr-icon.png

EXTRA_DIST = $(pixmap_DATA) $(icon_DATA)
